force-app/main/default/objects/Contact/fields/SC_Department__c.field-meta.xml
<CustomField>
    <fullName>SC_Department__c</fullName>
    <description>JKGROUP-97</description>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0001</fullName>
                <label>0001 Geschäftsführung</label>
            </value>
            <value>
                <fullName>0002</fullName>
                <label>0002 Einkauf</label>
            </value>
            <value>
                <fullName>0003</fullName>
                <label>0003 Verkauf</label>
            </value>
            <value>
                <fullName>0004</fullName>
                <label>0004 Organisation</label>
            </value>
            <value>
                <fullName>0005</fullName>
                <label>0005 Verwaltung</label>
            </value>
            <value>
                <fullName>0006</fullName>
                <label>0006 Fertigung</label>
            </value>
            <value>
                <fullName>0007</fullName>
                <label>0007 Qualitätssicherung</label>
            </value>
            <value>
                <fullName>0008</fullName>
                <label>0008 Sekretariat</label>
            </value>
            <value>
                <fullName>0009</fullName>
                <label>0009 Finanzabteilung</label>
            </value>
            <value>
                <fullName>0010</fullName>
                <label>0010 Rechtsabteilung</label>
            </value>
            <value>
                <fullName>Accounting</fullName>
                <isActive>false</isActive>
                <label>Accounting</label>
            </value>
            <value>
                <fullName>Service</fullName>
                <isActive>false</isActive>
                <label>Service</label>
            </value>
            <value>
                <fullName>Z001</fullName>
                <label>Z001 Innendienst</label>
            </value>
            <value>
                <fullName>Z002</fullName>
                <label>Z002 Logistik</label>
            </value>
            <value>
                <fullName>Z003</fullName>
                <label>Z003 Aussendienst</label>
            </value>
            <value>
                <fullName>Z004</fullName>
                <label>Z004 Marketing</label>
            </value>
            <value>
                <fullName>Z005</fullName>
                <label>Z005 Entwicklung</label>
            </value>
            <value>
                <fullName>Z006</fullName>
                <label>Z006 Service</label>
            </value>
            <value>
                <fullName>Z007</fullName>
                <label>Z007 Gelangensbestätigung</label>
            </value>
            <value>
                <fullName>Z008</fullName>
                <label>Z008 JK-Shop</label>
            </value>
            <value>
                <fullName>Z009</fullName>
                <label>Z009 Unit Sales</label>
            </value>
            <value>
                <fullName>Z010</fullName>
                <label>Z010 Parts</label>
            </value>
            <value>
                <fullName>Z011</fullName>
                <label>Z011 Sunlync</label>
            </value>
            <value>
                <fullName>Z012</fullName>
                <label>Z012 Service</label>
            </value>
            <value>
                <fullName>Z013</fullName>
                <label>Z013 Accounting</label>
            </value>
            <value>
                <fullName>Z014</fullName>
                <label>Z014 Melumé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>