force-app/main/default/objects/Contact/fields/SC_Language__c.field-meta.xml
<CustomField>
    <fullName>SC_Language__c</fullName>
    <description>JKGROUP-97, The preferred language for the customer</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>