force-app/main/default/objects/Contact/fields/SC_PartnerID__c.field-meta.xml
<CustomField>
    <fullName>SC_PartnerID__c</fullName>
    <description>JKGROUP-97</description>
    <label>Partner ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>